force-app/main/default/objects/Blufy_Config__mdt/Blufy_Config__mdt.object-meta.xml
<CustomObject>
    <label>Blufy Config</label>
    <pluralLabel>Blufy Config</pluralLabel>
</CustomObject>