force-app/main/default/objects/Blufy_Config__mdt/fields/GST_VAT_Applicable__c.field-meta.xml
<CustomField>
    <fullName>GST_VAT_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GST/VAT Applicable</label>
    <type>Checkbox</type>
</CustomField>