force-app/main/default/objects/Blufy_Config__mdt/fields/GST_VAT_Rate__c.field-meta.xml
<CustomField>
    <fullName>GST_VAT_Rate__c</fullName>
    <defaultValue>0</defaultValue>
    <label>GST/VAT Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>