force-app/main/default/objects/Blufy_Config__mdt/fields/Invoice_Due_Days__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Due_Days__c</fullName>
    <label>Invoice Due Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>