force-app/main/default/objects/Blufy_Config__mdt/fields/Logo__c.field-meta.xml
<CustomField>
    <fullName>Logo__c</fullName>
    <label>Logo</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>