force-app/main/default/objects/Blufy_Config__mdt/fields/Monthly_Invoice_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Invoice_Cycle__c</fullName>
    <label>Monthly Invoice Cycle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Last_Month</fullName>
            </value>
            <value>
                <fullName>Next_Month</fullName>
                <default>true</default>
                <label>Next_Month</label>
            </value>
            <value>
                <fullName>This_Month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>