force-app/main/default/objects/Blufy_Config__mdt/fields/Overlap_Holiday_For_Monthly_Session__c.field-meta.xml
<CustomField>
    <fullName>Overlap_Holiday_For_Monthly_Session__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Overlap Holiday For Monthly Session</label>
    <type>Checkbox</type>
</CustomField>