force-app/main/default/objects/Blufy_Config__mdt/fields/Segment_Type__c.field-meta.xml
<CustomField>
    <fullName>Segment_Type__c</fullName>
    <label>Segment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enrichment</fullName>
                <default>true</default>
                <label>Enrichment</label>
            </value>
            <value>
                <fullName>Professional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>