force-app/main/default/objects/Blufy_Config__mdt/fields/Terms_and_Conditions_Description__c.field-meta.xml
<CustomField>
    <fullName>Terms_and_Conditions_Description__c</fullName>
    <label>Terms and Conditions Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>