force-app/main/default/objects/Blufy_Config__mdt/fields/Terms_and_Conditions_Title__c.field-meta.xml
<CustomField>
    <fullName>Terms_and_Conditions_Title__c</fullName>
    <label>Terms and Conditions Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>